Se agrega form de contacto con modal funcional

--- a/clases.html
+++ b/clases.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clases | Gymbaland</title>
-    <link rel="icon" type="image/png" href="img/gymbaland.png">
+    <link rel="icon" type="image/png" href="img/gymbaland.jpg" sizes="16x16">
     <link rel="stylesheet" href="css/estilos.css">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/1c3a594d0c.js" crossorigin="anonymous"></script>
@@ -27,6 +27,7 @@
                 <li><a href="entrenadores.html">Entrenadores</a></li>
                 <li><a href="precios.html">Precios</a></li>
                 <li><a href="blog.html">Blog</a></li>
+                <li><a href="contacto.html">Contactanos</a></li>
             </ul>
         </nav>
     </header>
