--- a/entrenadores.html
+++ b/entrenadores.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="css/estilos.css">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/1c3a594d0c.js" crossorigin="anonymous"></script>
-    <!-- Enlace al archivo CSS -->
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
@@ -23,9 +22,10 @@
             <input type="checkbox" id="menu-toggle" class="menu-toggle">
             <ul class="menu">
                 <li><a href="index.html">INICIO</a></li>
-                <li><a href="clases.html">CLASES</a></li>
-                <li><a href="precios.html">PRECIOS</a></li>
-                <li><a href="blog.html">BLOG</a></li>
+                <li><a href="clases.html">Clases</a></li>
+                <li><a href="precios.html">Precios</a></li>
+                <li><a href="blog.html">Blog</a></li>
+                <li><a href="contacto.html">Contactanos</a></li>
             </ul>
         </nav>
     </header>
