--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gymbaland</title>
+    <link rel="icon" type="image/png" href="img/gymbaland.jpg" sizes="16x16">
     <link rel="stylesheet" href="css/estilos.css">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/1c3a594d0c.js" crossorigin="anonymous"></script>
@@ -34,6 +34,7 @@
                 </li>
                 <li><a href="entrenadores.html">Entrenadores</a></li>
                 <li><a href="precios.html">Precios</a></li>
+                <li><a href="contacto.html">Contacto</a></li>  
             </ul>
         </nav>
     </header>
