--- a/entrenadores.html
+++ b/entrenadores.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="es" data-theme="light">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/1c3a594d0c.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/estilos.css">
+    <script src="js/darkmode.js"></script>
 </head>
 <body>
     <header>
@@ -16,6 +17,9 @@
             <div class="logo"> 
                 <a>GYM<i class="fas fa-dumbbell"></i>BALAND</a>
             </div>
+            <button id="darkModeToggle" aria-label="Toggle dark mode">
+                <i class="fas fa-moon"></i>
+            </button>
             <label for="menu-toggle" class="menu-icon">
                 <i class="fas fa-bars"></i>
             </label>
@@ -387,4 +391,3 @@
     </footer>
 </body>
 </html>
-``` 
