--- a/precios.html
+++ b/precios.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="es" data-theme="light">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/estilos.css">
     <script src="https://kit.fontawesome.com/1c3a594d0c.js" crossorigin="anonymous"></script>
+    <script src="js/darkmode.js"></script>
 </head>
 <body>
     <!-- Encabezado -->
@@ -16,6 +17,9 @@
             <div class="logo">
                 <a>GYM<i class="fas fa-dumbbell"></i>BALAND</a>       
             </div>
+            <button id="darkModeToggle" aria-label="Toggle dark mode">
+                <i class="fas fa-moon"></i>
+            </button>
             <label for="menu-toggle" class="menu-icon"><i class="fas fa-bars"></i></label>
             <input type="checkbox" id="menu-toggle">
             <ul class="menu">
